# KNLMeansCL

./: .gitignore  .travis.yml  BENCHMARK.md  CHANGELOG  CHANGELOG.md  DOC.md  DOCUMENTATION.md  GNUmakefile  KNLMeansCL.sln  README.md  configure  meson.build  readme_build.txt
KNLMeansCL/: KNLMeansCL.cpp  KNLMeansCL.h  KNLMeansCL.sln  KNLMeansCL.vcxproj  KNLMeansCL.vcxproj.filters  NLMAvisynth.cpp  NLMAvisynth.h  NLMDefault.h  NLMKernel.cpp  NLMKernel.h  NLMVapoursynth.cpp  NLMVapoursynth.h  avisynth.h  kernel.h  startchar.h
KNLMeansCL/avs/: config.h
KNLMeansCL/shared/: NLMKernel.h  common.cpp  common.h  oclUtils.h  ocl_specific.cpp  ocl_specific.h  ocl_utils.cpp  ocl_utils.h  startchar.cpp  startchar.h
